# auto-wordpress-post

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md  README_DEVELOPMENT.md  docker-compose.yml  init.sql
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_tables.py
services/api/app/: deps.py  main.py  models.py  schemas.py
services/api/app/clients/: pplx_client.py  wp_client.py
services/api/app/routes/: articles.py  preview.py  taxonomies.py
services/api/app/services/: generation.py  sanitizer.py  taxonomy.py
services/api/app/templates/: preview.html
services/api/app/utils/: logging.py
services/api/app/workers/: celery_app.py  tasks_generate.py  tasks_publish.py
