[tool.poetry]
name = "auto-wordpress-post"
version = "1.0.0"
description = "AI-powered WordPress article generator and publisher"
authors = ["Development Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg = {extras = ["binary"], version = "^3.1.12"}
pydantic = {extras = ["email"], version = "^2.5.0"}
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
httpx = "^0.25.2"
tenacity = "^8.2.3"
bleach = "^6.1.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-json-logger = "^2.0.7"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"